# wndwalk

./: CMakeLists.txt  LICENSE  Makefile  README  README.md
include/: Key.hpp  config.hpp  control.hpp
src/: Key.hpp  KeyManager.cpp  KeyManager.hpp  config.hpp  control.hpp  focus.hpp  interfaces.hpp  key.hpp  key_manager.cpp  key_manager.hpp  log.hpp  main.cpp  services.hpp  virtual_desktop.hpp
